--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - name: lodev-action
         uses: ./
-      - name: Test server macOS
-        if: matrix.os == 'macos-latest'
-        run: |
-          dig @127.0.0.1 -p 5354 A example.lo
-          ping -c 1 example.lo
       - name: Test server Ubuntu
-        if: matrix.os != 'macos-latest'
         run: |
           dig A example.lo
           ping -c 1 example.lo
@@ -39,4 +33,4 @@ jobs:
           install-only: true
       - name: Test lodev binary
         run: |
-          lodev-linux-amd64
+          lodev-linux-amd64 -h
